home-assistant/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: home-assistant
  namespace: tsebra-home
  labels:
    app: home-assistant

spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      # securityContext:
      #   capabilities:
      #     add:
      #       - NET_ADMIN
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          ports:
            - name: http
              containerPort: 8123
          securityContext:
            privileged: true
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 8123
          # initialDelaySeconds: 0
          # failureThreshold: 3
          # timeoutSeconds: 1
          # periodSeconds: 10
          # readinessProbe:
          #   tcpSocket:
          #     port: 8123
          #   initialDelaySeconds: 0
          #   failureThreshold: 3
          #   timeoutSeconds: 1
          #   periodSeconds: 10
          # startupProbe:
          #   tcpSocket:
          #     port: 8123
          #   initialDelaySeconds: 0
          #   failureThreshold: 30
          #   timeoutSeconds: 1
          #   periodSeconds: 5
          volumeMounts:
            - name: ha-config-root
              mountPath: /config
            - name: configurationyaml
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
      volumes:
        - name: ha-config-root
          persistentVolumeClaim:
            claimName: home-assistant-config-root
        - name: configurationyaml
          configMap:
            name: home-assistant-config
            items:
              - key: configuration.yaml
                path: configuration.yaml
