home-assistant/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-loadbalancer
  namespace: tsebra-home

spec:
  type: LoadBalancer
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: http
  selector:
    app: home-assistant
